@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<title>Deezer Control Popup</title>
-		<link type="text/css" rel="stylesheet" href="css/large/popup.css" id="popup_style_css"/>
-		<script src="scripts/popup.js"></script>
+		<link type="text/css" rel="stylesheet" href="/css/large/popup.css" id="popup_style_css"/>
+		<script src="/scripts/popup.js"></script>
+		<script src="/scripts/localstorage.js"></script>
 		<script>loadStyle();</script>
 	</head>
 	<body onload="refreshPopup();" id="popup_display">
